k8s/eks/apps/am-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisbank-am-deployment
spec:
  selector:
    matchLabels:
      app: redisbank-am
  replicas: 1
  template:
    metadata:
      labels:
        app: redisbank-am
    spec:
      containers:
      - name: redisbank-am
        image: 735486936198.dkr.ecr.us-east-1.amazonaws.com/redisbank-am:latest
        imagePullPolicy: Always
        ports:
        - name: redisbank-am
          containerPort: 8082
