k8s/eks/apps/dg-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisbank-dg-deployment
spec:
  selector:
    matchLabels:
      app: redisbank-dg
  replicas: 1
  template:
    metadata:
      labels:
        app: redisbank-dg
    spec:
      containers:
      - name: redisbank-dg
        image: 735486936198.dkr.ecr.us-east-1.amazonaws.com/redisbank-datageneration:latest
        imagePullPolicy: Always
        ports:
        - name: redisbank-dg
          containerPort: 8080
