k8s/eks/apps/tr-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisbank-tr-deployment
spec:
  selector:
    matchLabels:
      app: redisbank-tr
  replicas: 1
  template:
    metadata:
      labels:
        app: redisbank-tr
    spec:
      containers:
      - name: redisbank-tr
        image: 735486936198.dkr.ecr.us-east-1.amazonaws.com/redisbank-transactions:latest
        imagePullPolicy: Always
        ports:
        - name: redisbank-tr
          containerPort: 8083
