k8s/eks/apps/ui-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisbank-ui-deployment
spec:
  selector:
    matchLabels:
      app: redisbank-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: redisbank-ui
    spec:
      containers:
      - name: redisbank-ui
        image: 735486936198.dkr.ecr.us-east-1.amazonaws.com/redisbank-ui:latest
        imagePullPolicy: Always
        ports:
        - name: redisbank-ui
          containerPort: 8080
