k8s/eks/apps/tr-app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisbank-tr-ingress
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: tr.us-east-1.srini.demo.redislabs.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: redisbank-tr
            port:
              number: 8083
