k8s/eks/apps/ui-app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisbank-ui-ingress
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: ui.us-east-1.srini.demo.redislabs.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: redisbank-ui
            port:
              number: 8080
